SoundHelix
----------

Author: Thomas Schürger (thomas@schuerger.com)


Change log
----------

0.10u:



0.9: 2016-12-29

    - Added support to the SimpleArrangementEngine for modifying the ActivityVectors of the generated ActivityMatrix using the
      "activityVectorModification" tag. Currently, the operators "set", "clear", "flip", "and", "andNot", "or" and "xor" are supported on any chord
      section range of an ActivityVector. See the SimpleArrangementEngine documentation for more details.

    - Added "patternRestartMode" tag to many of the SequenceEngine implementations, which allows to define whether the generated pattern should be
      restarted from the beginning on each chord section change, each chord change or never, respectively. For backwards compatibility, the default is
      to never restart the pattern.

    - Added two more pattern expansion operators, "+" for transposing pattern up, "-" for transposing pattern down, using the syntax "(pattern)+delta"
      or "(pattern)-delta", respectively. For example, "2/2,(1/2,2/2,-1/2,4/2)+2" is expanded to "2/2,3/2,4/2,1/2,6/2".

    - Changed the DrumSequenceEngine implementation to allow referring to ActivityVectors in conditional patterns'/LFO's conditions even if they are
      not provided in the ActivityVector list of the DrumSequenceEngine. This removes the need to apply the workaround of using dummy patterns.

    - Added support for specifying a crossoverPitch attribute per chordPattern tag in the PatternHarmonyEngine. If set, this attribute allows you to
      override the global crossoverPitch value.

    - Added support for pausing the playback if a STOP message is received from the synchronization device. Playing will continue if either START or
      CONTINUE is sent.

    - Added the chord types "sus2" and "sus4". Example chord names: "Csus2", "Csus24", "Csus26", "Csus4", "Csus44", "Csus46".
